--- a/layout/_partial/analytics.ejs
+++ b/layout/_partial/analytics.ejs
@@ -4,7 +4,7 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', '<%= theme.google_analytics.id %>', '<%= theme.google_analytics.site %>');  
+ga('create', '<%= theme.google_analytics.id %>', '<%= theme.google_analytics.site %>');
 ga('send', 'pageview');
 </script>
 <% } %>
@@ -15,7 +15,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "//hm.baidu.com/hm.js?<%= theme.baidu_tongji.sitecode %>";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
@@ -24,3 +24,21 @@ var _hmt = _hmt || [];
 <% if (theme.cnzz_tongji.enable){ %>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_<%= theme.cnzz_tongji.siteid %>'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s23.cnzz.com/z_stat.php%3Fid%3D<%= theme.cnzz_tongji.siteid %>' type='text/javascript'%3E%3C/script%3E"));</script>
 <% } %>
+
+
+
+<!-- baidu search 推送-->
+<script>
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https') {
+        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+    }
+    else {
+        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+    }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
+</script>
